# sirius

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  clickbench_load_duckdb.sql  environment.yml  setup_sirius.sh  tpch-queries.sql  tpch.sql  tpch_load.sql  tpch_load_mod.sql
.github/workflows/: sirius_test.yml
docker/aarch64/: Dockerfile
docker/aarch64/nightly/: Dockerfile
docker/aarch64/stable/: Dockerfile
docker/x86_64/: Dockerfile
docker/x86_64/nightly/: Dockerfile
docker/x86_64/stable/: Dockerfile
docs/: README.md  glossary.md
legacy/: hash_grouped_aggregate.cu
scripts/clickbench_runner/: runner.py
src/: config.cpp  cpu_cache.cpp  fallback.cpp  gpu_buffer_manager.cpp  gpu_columns.cpp  gpu_context.cpp  gpu_executor.cpp  gpu_physical_operator.cpp  sirius_extension.cpp
src/cuda/: allocator.cu  communication.cu  print.cu  utils.cu
src/cuda/cudf/: cudf_aggregate.cu  cudf_duplicate_elimination.cu  cudf_groupby.cu  cudf_join.cu  cudf_orderby.cu
src/cuda/expression_executor/: gpu_dispatch_string.cu
src/cuda/operator/: arbitrary_expression.cu  cuda_helper.cuh  hash_join_inner.cu  hash_join_right.cu  hash_join_single.cu  materialize.cu  strings_matching.cu
src/data/: CMakeLists.txt  cpu_data_representation.cpp  data_batch.cpp  data_batch_view.cpp  data_repository.cpp  data_repository_manager.cpp  gpu_data_representation.cpp  representation_converter.cpp
src/expression_executor/: gpu_expression_executor.cpp
src/expression_executor/specializations/: gpu_execute_comparison.cpp  gpu_execute_constant.cpp  gpu_execute_function.cpp  gpu_execute_operator.cpp
src/include/: config.hpp  cpu_cache.hpp  fallback.hpp  fallback_queries.hpp  gpu_buffer_manager.hpp  gpu_columns.hpp  gpu_physical_operator.hpp  memory_reservation_manager.hpp  print.hpp  sirius_extension.hpp  utils.hpp
src/include/cudf/: cudf_utils.hpp
src/include/data/: common.hpp  cpu_data_representation.hpp  cudf_table_converter.hpp  data_batch.hpp  data_batch_view.hpp  data_repository.hpp  data_repository_level.hpp  data_repository_manager.hpp  fixed_size_host_memory_resource.hpp  gpu_data_representation.hpp  representation_converter.hpp  spilling.hpp
src/include/expression_executor/: gpu_dispatcher.hpp  gpu_expression_executor.hpp  gpu_expression_executor_state.hpp
src/include/helper/: helper.hpp  types.hpp
src/include/log/: logging.hpp
src/include/memory/: common.hpp  fixed_size_host_memory_resource.hpp  gpu_memory_manager.hpp  host_table.hpp  memory_reservation.hpp  memory_space.hpp  null_device_memory_resource.hpp  per_stream_tracking_resource_adaptor.hpp
src/include/operator/: gpu_combine.hpp  gpu_physical_grouped_aggregate.hpp  gpu_physical_hash_join.hpp  gpu_physical_order.hpp  gpu_physical_result_collector.hpp  gpu_physical_strings_matching.hpp  gpu_physical_table_scan.hpp  gpu_physical_ungrouped_aggregate.hpp
src/include/parallel/: task.hpp  task_executor.hpp  task_queue.hpp  task_scheduler.hpp
src/include/pipeline/: gpu_pipeline_executor.hpp
src/include/pipeline_executor/: gpu_pipeline_executor.hpp  gpu_pipeline_task.hpp
src/include/scan/: scan_executor.hpp  scan_task.hpp
src/include/spilling/: downgrade_executor.hpp  downgrade_task.hpp
src/memory/: common.cpp  fixed_size_host_memory_resource.cpp  memory_reservation.cpp  memory_space.cpp  null_device_memory_resource.cpp  per_stream_tracking_resource_adaptor.cpp
src/operator/: CMakeLists.txt  gpu_combine.cpp  gpu_materialize.cpp  gpu_physical_column_data_scan.cpp  gpu_physical_cte.cpp  gpu_physical_empty_result.cpp  gpu_physical_grouped_aggregate.cpp  gpu_physical_hash_join.cpp  gpu_physical_limit.cpp  gpu_physical_nested_loop_join.cpp  gpu_physical_order.cpp  gpu_physical_result_collector.cpp  gpu_physical_substring.cpp  gpu_physical_table_scan.cpp  gpu_physical_top_n.cpp  gpu_physical_ungrouped_aggregate.cpp
src/parallel/: task_executor.cpp
src/plan/: gpu_plan_expression_get.cpp
test/: clickbench_sirius_queries.test  get_result_tpch.sql  test_null.sql  tpch_mod_sirius.test  tpchm_sirius_queries.test
test/answers/clickbench/: q1.csv  q10.csv  q11.csv  q12.csv  q13.csv  q14.csv  q15.csv  q16.csv  q17.csv  q18.csv  q19.csv  q2.csv  q21.csv  q22.csv  q23.csv  q24.csv  q25.csv  q26.csv  q28.csv  q29.csv  q3.csv  q30.csv  q31.csv  q32.csv  q33.csv  q34.csv  q35.csv  q36.csv  q37.csv  q38.csv  q39.csv  q4.csv  q40.csv  q41.csv  q42.csv  q43.csv  q5.csv  q6.csv  q7.csv  q8.csv  (+1 more)
test/answers/tpch/: q1.csv  q11.csv  q12.csv  q14.csv  q15.csv  q16.csv  q17.csv  q18.csv  q19.csv  q2.csv  q20.csv  q21.csv  q22.csv  q3.csv  q4.csv  q5.csv  q6.csv  q7.csv  q8.csv  q9.csv
test/cpp/: CMakeLists.txt  cpu_cache_test.cpp  test_utils.hpp  unittest.cpp
test/cpp/data/: CMakeLists.txt  test_data_batch.cpp  test_data_batch_view.cpp  test_data_repository.cpp  test_data_repository_manager.cpp  test_data_representation.cpp
test/cpp/memory_management/: CMakeLists.txt  memory_test_common.hpp  test_cpu_cache.cpp  test_gpu_kernels.cu  test_gpu_kernels.cuh  test_memory_reservation_manager.cpp  test_memory_space.cpp  test_per_stream_tracking_resource_adaptor.cpp
test/cpp/parallel/: CMakeLists.txt  test_task_executor.cpp
test/cpp/pipeline/: CMakeLists.txt  test_chunk_merge.cpp
test/cpp/utils/: CMakeLists.txt  utils.cpp  utils.hpp
test/sql/: clickbench-sirius.test  clickbench_sirius.test  tpch-sirius.test  tpch_sirius.test  tpch_sirius_queries.test  tpch_sirius_queries_mod.test
test/tpch_mod_performance/: generate_test_data.py
test/tpch_performance/: duckdb_queries.py  generate_test_data.py  performance_test.py  sirius_queries.py
test_datasets/tpch-mod-dbgen/: bm_utils.c  build.c  dbgen  driver.c  dsstypes.h  print.c  qgen
